careers page layout issue solved

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2613,7 +2613,8 @@ button[type="button"] {
   // font-size: 15px;
   button {
     // margin-top: 1.2rem;
-    margin: 2rem auto;
+    //margin: 2rem auto;
+    margin-top: 2rem;
     // padding: 0 50px !important;
   }
   .titles {
